--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,7 +21,10 @@
     "expo-linear-gradient": "~14.0.1",
     "expo-permissions": "^14.4.0",
     "expo-status-bar": "~2.0.0",
+    "extract-colors": "^4.1.1",
+    "get-pixels": "^3.3.3",
     "react": "18.3.1",
+    "react-extract-colors": "^1.5.1",
     "react-native": "0.76.5",
     "react-native-extract-color": "^1.0.0",
     "react-native-gesture-handler": "~2.20.2",
